<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotifyMe</string>
    <string name="activity_App_Settings">App Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="drawer_options">
        <item>Find Public Events</item>
        <item>Saved Public Events</item>
        <item>Friends\' Events</item>
        <item>Friend List</item>
        <item>Settings</item>
        <item>Wearable</item>
    </string-array>

    <string name="title_activity_events_for_all">EventsForAll</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_friend">Add friend</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="see_more">Click to see more</string>
    <string name="image_content_description">ImageView content description</string>
    <string name="location_description">Location Description</string>
    <string name="event_description">Event Description</string>
    <string name="date_time">Date</string>
    <string name="type_event">Type of Event</string>
    <string name="event_poster">Event Poster</string>
    <string name="public_event_activity">Public Event Description</string>
    <string name="urlInfo">URL</string>
    <string name="telInfo">Tel</string>
    <string name="accept_public_event">Save Event</string>
    <string name="discard_public_event">Cancel</string>

    <string-array name="radiusEntries">
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
        <item>7km</item>
    </string-array>
    <string-array name="radiusValues">
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>7000</item>
    </string-array>
    <string-array name="dateEntries">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
    </string-array>
    <string-array name="dateValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="typeEvent">
        <item>NightClub</item>
        <item>Theatre</item>
        <item>Live Music</item>
        <item>Restaurant</item>
        <item>Art</item>
    </string-array>
    <string-array name="typeEventValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="empty_array" />
    <string-array name="friend_list_dialog_option">
        <item>Delete</item>
    </string-array>

    <string name="addFriendTitle">Add your friend\'s email</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="reply_label">Reply</string>
    <string name="create_friendEv">Create Friends Event</string>
    <string name="friends">Friends</string>

</resources>